After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 700592 - pangocairo kerning problem with nonidentity scaling regression
pangocairo kerning problem with nonidentity scaling regression
Status: RESOLVED FIXED
Product: pango
Classification: Platform
Component: cairo
1.32.x
Other Linux
: Normal critical
: ---
Assigned To: pango-maint
pango-maint
: 698777 700664 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2013-05-18 18:20 UTC by Jim Evins
Modified: 2015-07-09 15:39 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Screenshot showing problem with pangocairo-1.32.5 (Ubuntu 13.04) (64.01 KB, image/png)
2013-05-18 18:20 UTC, Jim Evins
Details
Screenshot showing working properly with pangocairo-1.30.1 (LinuxMint 14) (69.88 KB, image/png)
2013-05-18 18:22 UTC, Jim Evins
Details
Demo program for attached screenshots. (1.61 KB, text/plain)
2013-05-18 18:23 UTC, Jim Evins
Details
Simple C program demonstrating the problem (1.09 KB, text/x-csrc)
2014-06-10 11:06 UTC, Zbigniew Chyla
Details
Output from sample program (demo2.c) on Ubuntu 12.10 (7.37 KB, image/png)
2014-06-10 11:07 UTC, Zbigniew Chyla
Details
Output from sample program (demo2.c) on Ubuntu 14.04 (6.37 KB, image/png)
2014-06-10 11:07 UTC, Zbigniew Chyla
Details
screenshot (43.07 KB, image/png)
2014-09-18 06:47 UTC, Daiki Ueno
Details

Description Jim Evins 2013-05-18 18:20:45 UTC
Created attachment 244640 [details]
Screenshot showing problem with pangocairo-1.32.5 (Ubuntu 13.04)

This looks like a regression of Bug #341481 which was fixed back 2009.

Kerning does not seem to scale, see attached screenshot.
Comment 1 Jim Evins 2013-05-18 18:22:22 UTC
Created attachment 244641 [details]
Screenshot showing working properly with pangocairo-1.30.1 (LinuxMint 14)
Comment 2 Jim Evins 2013-05-18 18:23:29 UTC
Created attachment 244642 [details]
Demo program for attached screenshots.
Comment 3 Jim Evins 2013-05-18 18:35:32 UTC
*** Bug 698777 has been marked as a duplicate of this bug. ***
Comment 4 Hans Breuer 2014-02-14 15:53:04 UTC
The issue is reproduceable with Dia ( bug 573261 ) and with a slightly modified version of cairosimple.c ( see https://mail.gnome.org/archives/dia-list/2014-February/msg00011.html ). The effect of the kludge from bug 341481 was removed with the port to HarfBuzz.
Comment 5 Behdad Esfahbod 2014-02-18 22:59:05 UTC
Only with TrueType kerning, not GPOS, right?
Comment 6 Behdad Esfahbod 2014-02-21 04:07:36 UTC
Hans or Jim, any chance you can test?
Comment 7 Hans Breuer 2014-02-21 11:05:33 UTC
If I understand the question and Pango code correctly GPOS is only used if explicetly asked for with pango_ot_*() API or maybe with "writing systems requiring sophisticated glyph positioning" [http://www.microsoft.com/typography/otspec/gpos.htm]. Dia is not using pango_ot_*() API (neither does the modified cairosimple.c metioned above) and the text showing the effect for me is e.g. 'Text' or 'circle' (just zoom into render-test.dia with dia-0.97.2 and cairo antialiased rendering).
If my understanding is not correct I do not know what test you are asking for.
Comment 8 Zbigniew Chyla 2014-06-10 11:04:48 UTC
It looks like we've encountered the same (or similar) problem. After upgrade from Ubuntu 12.10 (libpango1.0-0: 1.30.1-0ubuntu3) to 14.04 (libpango1.0-0: 1.36.3-1ubuntu1), one of our programs started producing broken text with PNG output (PDF files are fine). The actual program is rather complex and uses pangomm, cairomm etc. but I reduced the problem to simple C function.
Comment 9 Zbigniew Chyla 2014-06-10 11:06:10 UTC
Created attachment 278201 [details]
Simple C program demonstrating the problem
Comment 10 Zbigniew Chyla 2014-06-10 11:07:22 UTC
Created attachment 278202 [details]
Output from sample program (demo2.c) on Ubuntu 12.10
Comment 11 Zbigniew Chyla 2014-06-10 11:07:49 UTC
Created attachment 278203 [details]
Output from sample program (demo2.c) on Ubuntu 14.04
Comment 12 Daiki Ueno 2014-09-18 06:47:20 UTC
Created attachment 286447 [details]
screenshot

Not sure if this is related, the minifont size seems also affected.  It becomes smaller and smaller if larger scaling value (> 100) is used.
Comment 13 Artur Frysiak 2015-01-21 11:26:42 UTC
Bug still present in 1.36.8-3 in Ubuntu 15.04 alpha.
Comment 14 Behdad Esfahbod 2015-05-12 00:17:27 UTC
Humm.  Should be fixed again.  Please test:

commit 061633100aa120262db2acf9486bb590b2e0862e
Author: Behdad Esfahbod <behdad@behdad.org>
Date:   Mon May 11 17:16:40 2015 -0700

    Fix PangoFc with non-identity scale matrix (again!)
    
    https://bugzilla.gnome.org/show_bug.cgi?id=700592
Comment 15 Behdad Esfahbod 2015-05-15 00:50:46 UTC
*** Bug 700664 has been marked as a duplicate of this bug. ***
Comment 16 Artur Frysiak 2015-07-09 15:39:22 UTC
pango 1.37.1 works for me.