Fix PangoFc with non-identity scale matrix (again!)

https://bugzilla.gnome.org/show_bug.cgi?id=700592